[gd_scene load_steps=7 format=3 uid="uid://d2xaxkk5uc2l1"]

[ext_resource type="Script" path="res://levels/interface.gd" id="1_f1v3k"]
[ext_resource type="PackedScene" uid="uid://ct007miqcxe00" path="res://menus/noise.tscn" id="2_y18bi"]
[ext_resource type="Texture2D" uid="uid://devs7424rfgh2" path="res://art/pentaframe.png" id="3_k438a"]
[ext_resource type="Texture2D" uid="uid://b74asa817453l" path="res://art/Restart.png" id="4_lcw7p"]
[ext_resource type="FontFile" uid="uid://daqyvu81etlsh" path="res://fonts/EB_Garamond/static/EBGaramond-Bold.ttf" id="7_8sg04"]
[ext_resource type="Texture2D" uid="uid://c0nby5p4tojms" path="res://art/QuestionMarkIcon.png" id="8_85tf6"]

[node name="Interface" type="CanvasLayer"]
layer = -1
script = ExtResource("1_f1v3k")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.152941, 0.00784314, 0.00784314, 1)

[node name="noise" parent="." instance=ExtResource("2_y18bi")]

[node name="frame" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_k438a")
expand_mode = 1
stretch_mode = 4

[node name="restart" type="TextureButton" parent="."]
modulate = Color(1, 0, 1, 1)
anchors_preset = -1
anchor_left = 0.917
anchor_top = 0.077
anchor_right = 0.972
anchor_bottom = 0.176
offset_left = -0.384033
offset_top = 0.103996
offset_right = 0.255981
offset_bottom = -0.0480118
texture_normal = ExtResource("4_lcw7p")
texture_pressed = ExtResource("4_lcw7p")
texture_hover = ExtResource("4_lcw7p")
ignore_texture_size = true
stretch_mode = 0

[node name="left" type="TextureButton" parent="."]
modulate = Color(0.792157, 0.45098, 0.388235, 1)
anchors_preset = -1
anchor_left = 0.368
anchor_top = 0.778
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 0.0639648
offset_top = -0.144043
offset_right = -2.0
offset_bottom = -9.0
texture_normal = ExtResource("4_lcw7p")
texture_pressed = ExtResource("4_lcw7p")
texture_hover = ExtResource("4_lcw7p")
ignore_texture_size = true
stretch_mode = 0

[node name="right" type="TextureButton" parent="."]
modulate = Color(0.792157, 0.45098, 0.388235, 1)
anchors_preset = -1
anchor_left = 0.514
anchor_top = 0.778
anchor_right = 0.646
anchor_bottom = 0.988
offset_left = -0.127991
offset_top = -0.144043
offset_right = -2.19202
offset_bottom = -1.224
texture_normal = ExtResource("4_lcw7p")
texture_pressed = ExtResource("4_lcw7p")
texture_hover = ExtResource("4_lcw7p")
ignore_texture_size = true
stretch_mode = 0
flip_h = true

[node name="timer" type="Label" parent="."]
anchors_preset = -1
anchor_left = 0.917
anchor_top = 0.037
anchor_right = 0.962
anchor_bottom = 0.074
offset_left = -0.384033
offset_top = -0.976
offset_right = -0.224121
offset_bottom = 2.048
theme_override_fonts/font = ExtResource("7_8sg04")
theme_override_font_sizes/font_size = 20
text = "TIME"

[node name="hint" type="TextureButton" parent="."]
anchors_preset = -1
anchor_left = -0.007
anchor_top = 0.025
anchor_right = 0.111
anchor_bottom = 0.222
offset_left = 0.0640001
offset_top = -0.200001
offset_right = 0.127991
offset_bottom = 0.143982
texture_normal = ExtResource("8_85tf6")
texture_pressed = ExtResource("8_85tf6")
texture_hover = ExtResource("8_85tf6")
ignore_texture_size = true
stretch_mode = 4

[node name="Label" type="Label" parent="."]
anchors_preset = -1
anchor_left = 0.951
anchor_top = 0.16
anchor_right = 0.972
anchor_bottom = 0.202
offset_left = 0.447998
offset_top = 0.319992
offset_right = 0.255981
offset_bottom = 0.103989
theme_override_fonts/font = ExtResource("7_8sg04")
theme_override_font_sizes/font_size = 20
text = "R"

[connection signal="pressed" from="restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="left" to="." method="_on_left_pressed"]
[connection signal="pressed" from="right" to="." method="_on_right_pressed"]
[connection signal="pressed" from="hint" to="." method="_on_hint_pressed"]
